style.css
body{
  font-family: 'Playfair Display', serif;
  background-color: #FFB149;
}
/*
* Smågrejer till typ mindre taggar
*/
p{
  margin: 0;
  padding: 0;
}
ul{
  text-align: left;
  margin-right: 0;
}
h1{
  margin: 0;
  font-size: 50px;
}
h2{
  font-size: 40px;
}
h3{
  margin: 0;
  font-size: 30px;
}
/*
* Idn och klasser
*/
#midtext{
  text-align: center;
}
.navbar{
  float: left;
}

#navigation{
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #FFB149;
}

li a {
    display: block;
    color: black;
    text-align: center;
    padding: 14px 40px;
    text-decoration: none;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}
a:hover:not(.active) {
    background-color: #FF7D49;
}

.active {
background-color:#32B07A;
}
article>h2{
  text-align: center;
}
select{
  margin-left: 10px;
  padding-left: 5%;
}

article>img{
  max-width: 20%;
  height: auto;
  float:left;
  margin-right: 5px;
}
.art1{
  width: 49%;
  height: 45%;
  background-color: #53C594;
  float: left;
  margin: 0;
  box-sizing: border-box;
}
#art1_margin{
  margin-left: 2%;
}
#art2{
  margin-top: 10px;
  text-align: center;
  width: 100%;
  height: 43%;
  background-color: #53C594;
  float: left;
  box-sizing: border-box;
}
#welcome{
  height: 10%;
}
/*
* Stora element
*/
header{
  background-color: #357DA3;
  width: 98%;
  height: 100px;
  padding: 10px;
  padding-bottom: 20px;
  overflow: hidden;
  margin-bottom: 20px;
  border-radius: 20px;
  -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
	-moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
	box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
}
nav{
  display: block;
  background-color: #FFB149;
  width: 100%;

}
main{
  text-align: center;
  background-color: #32B07A;
  padding-bottom: 15px;
  padding: 20px;
  height: 650px;
  border-top-right-radius: 20px;
  border-top-left-radius: 0;
}

footer{
  background-color: #FF7D49;
  text-align: center;
  float: left;
  padding-top: 35px;
  height: 100px;
  width: 100%;
  border-bottom-left-radius: 20px;
  border-bottom-right-radius:20px;
}
article{
  margin: 0;
  border-radius: 125px 23px 125px 23px;
  background-color: #53C594;
  width: 50%;
  float: left;
  padding: 25px;
  overflow: hidden;
}

/*
  Här skiver ni generella egenskaper
*/

@media screen and(max-width:479px){
  body{
    background-color: green;
  }
}

@media screen and (min-width: 480px) and (max-width: 1024px){

  #wrapper>nav{
    position: fixed;
    width: 20%;
    min-width: 192px;
    top: 15%;
    bottom: 10%;

  }

  #wrapper>#navigation{
    width: 100%;
    margin: 0;
    padding: 0;
    float: left;
  }
  .navbar{
    float: left;
  }

  #wrapper>main{
    position: fixed;
    left: 200px;
    margin-right: 20px;
    width: 75%;
    border-bottom-right-radius: 20px;
  }
  select{
    padding-left: 5px;
  }
  h1{
    font-size: 40px;
  }
  h2{
    font-size: 30px;
  }
  h3{
    font-size: 20px;
  }
  header>h1{
    font-size: 20px;
  }
  header>h3{
    font-size: 10px;
  }
  li a {
      text-align: left;
      padding-left: 20px;
      width: 185px;
      text-decoration: none;
      border-top-right-radius: 0;
      border-top-left-radius: 20px;
      border-bottom-left-radius: 20px;
  }
  li{
    width: auto;
  }
  #wrapper>footer{
    position: fixed;
    min-width: 190px;
    width: 19.2%;
    top: 59.5%;
    float: left;
    border-bottom-right-radius: 0;
    border-top-left-radius:20px;
  }
  #wrapper>header{
    position: fixed;
    min-width: 200px;
    width: 18%;
    box-shadow: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

@media screen and (min-width: 1025px){

}

